--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <link rel="stylesheet" href="./styles/style.css" />
 
-    <script src="/scripts/script.js" defer></script>
+    <script src="./scripts/script.js" defer></script>
 
     <title>CorpComment -- Give Feedback, Publicly</title>
   </head>
@@ -99,28 +99,28 @@
 
       <ul class="hashtags">
         <li class="hashtags__item">
-          <button class="hashtag">#ByteGrad</button>
+          <button class="hashtag">#LunarVim</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Nike</button>
+          <button class="hashtag">#Linux</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Starbucks</button>
+          <button class="hashtag">#Coffee</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Netflix</button>
+          <button class="hashtag">#Arch</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Amazon</button>
+          <button class="hashtag">#Rust</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Microsoft</button>
+          <button class="hashtag">#C++</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Adidas</button>
+          <button class="hashtag">#Scripting</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#McDonald's</button>
+          <button class="hashtag">#WebDev</button>
         </li>
       </ul>
     </div>
