--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://bytegrad.com/course-assets/js/1/favicon.png"
-    />
+    <link rel="icon" type="image/png" href="./public/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,7 +23,7 @@
 
     <script src="./scripts/script.js" defer></script>
 
-    <title>CorpComment -- Give Feedback, Publicly</title>
+    <title>LangComment -- Give Feedback, Publicly</title>
   </head>
 
   <body class="body">
@@ -55,16 +51,12 @@
       <main class="app">
         <header class="header">
           <img
-            src="https://bytegrad.com/course-assets/js/1/pattern.svg"
+            src="/public/pattern.svg"
             alt="pattern"
             class="header__pattern"
           />
           <a href="." class="logo">
-            <img
-              src="https://bytegrad.com/course-assets/js/1/logo.svg"
-              alt="logo"
-              class="logo__img"
-            />
+            <img src="/public/logo.svg" alt="logo" class="logo__img" />
           </a>
           <h1 class="first-heading">
             Give Feedback. <span class="u-italic u-transparent">Publicly.</span>
