--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </header>
 
         <ol class="feedbacks">
-          <!-- <div class="spinner"></div> -->
+          <div class="spinner"></div>
         </ol>
       </main>
 
