added an if case to prevent selecting hastag list item even outside the area since the list is bigger also extract the companyname without the #

--- a/index.html
+++ b/index.html
@@ -91,28 +91,28 @@
 
       <ul class="hashtags">
         <li class="hashtags__item">
-          <button class="hashtag">#LunarVim</button>
+          <button class="hashtag">#ByteGrad</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Linux</button>
+          <button class="hashtag">#Nike</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Coffee</button>
+          <button class="hashtag">#Starbucks</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Arch</button>
+          <button class="hashtag">#Netflix</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Rust</button>
+          <button class="hashtag">#Amazon</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#C++</button>
+          <button class="hashtag">#Microsoft</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#Scripting</button>
+          <button class="hashtag">#Adidas</button>
         </li>
         <li class="hashtags__item">
-          <button class="hashtag">#WebDev</button>
+          <button class="hashtag">#McDonald's</button>
         </li>
       </ul>
     </div>
